[project]
name = "comfyui-promptconverter"
description = "A ComfyUI custom node that converts prompts between different AI image generation models."
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vkff5833/ComfyUI-PromptConverter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vkff5833"
DisplayName = "ComfyUI-PromptConverter"
Icon = ""
